package designpatterns.command.command;

public interface SoldierCommand {
    void execute();

    void undo();
}
